--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-semver = "1.0.3"
+[dependencies.semver]
+version = "1.0"
+default-features = false
+
+[dependencies.lazy_static]
+version = "1.4"
+default-features = false
 
 [dependencies.binver_derive]
 path = "derive"
