--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "binver"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["std"]
+std = []
 
 [dependencies.semver]
 version = "1.0"
