--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "binver"
 version = "0.1.0"
 edition = "2018"
+authors = ["Trangar"]
+license = "MIT OR Apache-2.0"
 
 [features]
 default = ["std"]
