--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2018"
 authors = ["Trangar"]
 license = "MIT OR Apache-2.0"
+description = "Binary (de)serialization framework that is backwards compatible with versioned fields."
+repository = "https://github.com/trangar/binver"
 
 [features]
 default = ["std"]
@@ -18,4 +20,4 @@ version = "1.4"
 default-features = false
 
 [dependencies.binver_derive]
-path = "derive"
+version = "0.1.0"
