--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -2,6 +2,10 @@
 name = "binver_derive"
 version = "0.1.0"
 edition = "2018"
+authors = ["Trangar"]
+license = "MIT OR Apache-2.0"
+description = "derive for binver"
+repository = "https://github.com/trangar/binver"
 
 [lib]
 proc-macro = true
